--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<video width="60%" controls>
-  <source src="meme.mp4" type="video/mp4">
-Your browser does not support the video tag.
+<video style="margin: 0 auto" height="90%" controls>
+  	<source src="meme.mp4" type="video/mp4">
+	Your browser does not support the video tag.
 </video>
 
 </body>
