--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
 <body>
 
-<video style="margin: 0 auto" height="70%" controls>
+<center><div style="margin: 0 auto">
+	<video autoplay controls>
   	<source src="meme.mp4" type="video/mp4">
 	Your browser does not support the video tag.
-</video>
+	</video>
+</div></center>
 
 </body>
 </html>
