--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
 <!DOCTYPE html>
+<head>
+	<title>The best website ever<3</title>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-P15MW00K4G"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-P15MW00K4G');
+	</script>
+</head>
 <html>
 <body>
 
